Repair buttons on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -2131,7 +2131,7 @@ body {
   display: inline-block;
   font-size: .9em;
   font-weight: bold;
-  font-family: "Gotham", "Century Gothic", Arial, Helvetica, sans-serif;
+  letter-spacing: 0.01em;
   line-height: 1;
   outline: 0;
   padding: 1em 1em 1.1em;
