--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -7,7 +7,7 @@
 	display: inline-block; 
 	font-size: .9em;
 	font-weight: bold;
-	font-family: $font-gotham;
+	letter-spacing: 0.01em;
 	line-height: 1;
 	outline: 0;
 	padding: 1em 1em 1.1em;
